# todo-app-cli-phase1

./: README.md  main.py  pyproject.toml  validate_features.py
history/prompts/001-todo-cli-app/: 1-todo-cli-app-spec.spec.prompt.md  2-todo-cli-app-plan.plan.prompt.md  3-todo-cli-app-tasks.tasks.prompt.md  4-todo-cli-app-implementation-progress.tasks.prompt.md  5-todo-cli-app-implementation-complete.tasks.prompt.md
history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md  1-update-constitution.constitution.prompt.md
history/prompts/general/: 2-plan-intermediate-advanced-features.plan.prompt.md  3-plan-implementation-architecture.plan.prompt.md
history/prompts/todo-intermediate-advanced/: 4-generate-implementation-tasks.tasks.prompt.md  5-execute-implementation-plan.red.prompt.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-app/checklists/: requirements.md
specs/001-todo-cli-app/contracts/: task-api-contract.md
specs/002-todo-intermediate-advanced/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-intermediate-advanced/contracts/: api-contracts.md
src/cli/: main.py
src/lib/: utils.py
src/models/: task.py  task_list.py
src/services/: recurrence_service.py  reminder_service.py  task_manager.py
tests/contract/: test_add_task.py  test_delete_task.py  test_toggle_status.py  test_update_task.py  test_view_tasks.py
tests/integration/: test_cli_integration.py
tests/unit/models/: test_task.py
(+1 files in other folders)
